syntax = "proto3";
package common;

import "global_import.proto";

option go_package = "card-game-server-prototype/pkg/grpc/commongrpc";
option csharp_namespace = "Joker.Gameplay.Grpc.Models";
option (csharp_assembly) = "Joker.Gameplay.Common";
option (csharp_access) = public;

service ChatService {
  rpc Subscribe(google.protobuf.Empty) returns (stream ChatMessage) {}
  rpc Send(ChatRequest) returns (google.protobuf.Empty) {}
}

message ChatRequest{
  string message = 1;
}

message ChatMessage {
  Msg latest_message = 1;
  repeated Msg history = 2;
}

message Msg {
  string uid = 1;
  string message = 2;
}
